added simple balance table and implementation
